--- a/menu.html
+++ b/menu.html
@@ -6,98 +6,137 @@
   </head>
   <link rel="icon" href="iconos.png">  <body>
   <section>
-    <body>
+    <div id="logodos">
+    <h4>logodos</h4>
+    <img src="ejem333.png">
+  </div>
+
 
 
   <link rel="icon" href="iconos.png">
-        <font size="1" style="color: red">® Creado por Freektom (TCL) </font>
+        <font size="3" style="color: red">® Creado por Freektom (TCL) </font>
 <form>
-  <img src="ejem2.png"/>
+  <img src="ejem222.png"/>
   <center>
     <center>
+
+
+
+
       <style media="screen">
         * {
-          background-color: #040707
+          background-color: #b8bb66
+
         }
+
       </style>
+
       <div style= "text-align: top;">
         <font size="5" face=Arial>
       <b style="left:700px; position: absolute;top: 25%; color: red"><a href="Fotografias.html"> Fotografias</b>
       </div>
+
       <div style= "text-align: top;">
         <font size="5" face=Arial>
       <b style="left:700px; position: absolute;top: 31%; color: red"><a href="Dibujos.html"> Dibujos</b>
       </div>
+
       <div style= "text-align: top;">
         <font size="5" face=Arial>
       <b style="left:700px; position: absolute;top: 37%; color: red"><a href="Textos.html"> Mis Textos</b>
       </div>
+
       <div style= "text-align: top;">
         <font size="5" face=Arial>
       <b style="left:700px; position: absolute;top: 43%; color: red"><a href="Musica.html"> Mi Musica</b>
       </div>
+
       <div style= "text-align: top;">
         <font size="5" face=Arial>
       <b style="left:700px; position: absolute;top: 49%; color: red"><a href="Pareidolias.html"> Pareidolias</b>
       </div>
+
       <div style= "text-align: top;">
         <font size="5" face=Arial>
       <b style="left:700px; position: absolute;top: 55%; color: red"><a href="Videoclips.html"> Videoclips</b>
       </div>
+
       <div style= "text-align: top;">
         <font size="5" face=Arial>
       <b style="left:700px; position: absolute;top: 61%; color: red"><a href="Sobre Mi.html"> Sobre Mi</b>
       </div>
+
       <div style= "text-align: top;">
-        <font size="5" face=Arial>
+        <font size="5" face=Arial color= Red>
       <b style="left:700px; position: absolute;top: 67%; color: red"><a href="Rimasroboticas.html"> Rimas Roboticas</b>
       </div>
+
+
+
     </center>
+
+
+
+
+
+
+
 </form>
     </center>
+
     <font size="5" face=Arial>
 <h1 style="left:700px; position: absolute;top: 8%; color: red">FreekTom</h1>
+
 <div style= "text-align: top;">
   <font size="18" face=Arial>
-<b style="left:605px; position: absolute;top: 80%; color: red"><a href="freeks.html"></b>
+<b style="left:605px; position: absolute;top: 80%; color: red"><a href="freeks.html">.::FREEKS::.</b>
 </div>
+
+  <body>
+
   </body>
-  
 </html>
 <style media="screen">
   /* Esto es codigo CSS porque esta adentro de un tag <style> */
   a {
     font-family: -apple-system, BlinkMacSystemFont, 'Arial', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    background-color: #040707
+    background-color: #b8bb66
   }
   a {
     color:white;
     outline: none;
-    background-color: #040707;
-    padding: 5px 10px;
-    text-decoration: none;
-    border-radius: 5px;
-  }
-  b {
-    font-family: -apple-system, BlinkMacSystemFont, 'Arial', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    background-color: #040707
-  }
-  b {
-    color: red;
-    outline: none;
-    background-color: #040707;
-    padding: 5px 10px;
-    text-decoration: none;
-    border-radius: 5px;
-  }
-  button {
-    color:white;
-    outline: none;
-    background-color: #040707;
+    background-color: #b8bb66;
     padding: 5px 10px;
     text-decoration: none;
     border-radius: 5px;
   }
 
+
+  b {
+    font-family: -apple-system, BlinkMacSystemFont, 'Arial', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    background-color: #b8bb66
+  }
+  b {
+    color: red;
+    outline: none;
+    background-color: #b8bb66;
+    padding: 5px 10px;
+    text-decoration: none;
+    border-radius: 5px;
+  }
+
+
+  button {
+    color:white;
+    outline: none;
+    background-color: #b8bb66;
+    padding: 5px 10px;
+    text-decoration: none;
+    border-radius: 5px;
+  }
+
+  #logodos{
+    float:right;
+  }
   /* Aca termina el codigo CSS */
 </style>
