--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Free Freaks</title>
   </head>
 <link rel="icon" href="iconos.png">  <body>
-    <font size="2" style="color: red">® Creado por Freektom (TCL) </font>
+    <font size="3" style="color: red">® Creado por Freektom (TCL) </font>
     <center>
       <font size="5" font="Arial">
   <h2 id:"titulo" style="color: white">Free Freaks</h2>
@@ -19,12 +19,12 @@
 <style media="screen">
   /* Esto es codigo CSS porque esta adentro de un tag <style> */
 
-  * {   background-color: #040707
+  * {   background-color: #b8bb66
 
     }
   a, h2 {
     font-family: -apple-system, BlinkMacSystemFont, 'Arial Black', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    background-color: #040707
+    background-color: #b8bb66
 
 
 
@@ -33,11 +33,10 @@
   a {
     color:white;
     outline: none;
-    background-color: #040707;
+    background-color: #b8bb66;
     padding: 5px 10px;
     text-decoration: none;
     border-radius: 5px;
   }
   /* Aca termina el codigo CSS */
 </style>
-© 2021 GitHub, Inc.
