--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <font size="3" style="color: red">® Creado por Freektom (TCL) </font>
     <center>
       <font size="5" font="Arial">
-  <h2 id:"titulo" style="color: white">Free Freaks</h2>
+  <h2 id:"titulo" style="color: red">Free Freaks</h2>
 
       <img src="portada.png" />
       <br />
@@ -31,7 +31,7 @@
 
   }
   a {
-    color:white;
+    color:black;
     outline: none;
     background-color: #b8bb66;
     padding: 5px 10px;
