--- a/menu.html
+++ b/menu.html
@@ -6,10 +6,7 @@
   </head>
   <link rel="icon" href="iconos.png">  <body>
   <section>
-    <div id="logodos">
-    <h4>logodos</h4>
-    <img src="ejem333.png">
-  </div>
+
 
 
 
@@ -30,6 +27,8 @@
         }
 
       </style>
+
+
 
       <div style= "text-align: top;">
         <font size="5" face=Arial>
@@ -67,7 +66,7 @@
       </div>
 
       <div style= "text-align: top;">
-        <font size="5" face=Arial color= Red>
+        <font size="5" face=Arial>
       <b style="left:700px; position: absolute;top: 67%; color: red"><a href="Rimasroboticas.html"> Rimas Roboticas</b>
       </div>
 
@@ -84,8 +83,8 @@
 </form>
     </center>
 
-    <font size="5" face=Arial>
-<h1 style="left:700px; position: absolute;top: 8%; color: red">FreekTom</h1>
+    <font size="7" face=Arial>
+<h1 style="left:615px; position: absolute;top: 3%; color: black">FreekTom</h1>
 
 <div style= "text-align: top;">
   <font size="18" face=Arial>
@@ -98,18 +97,7 @@
 </html>
 <style media="screen">
   /* Esto es codigo CSS porque esta adentro de un tag <style> */
-  a {
-    font-family: -apple-system, BlinkMacSystemFont, 'Arial', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    background-color: #b8bb66
-  }
-  a {
-    color:white;
-    outline: none;
-    background-color: #b8bb66;
-    padding: 5px 10px;
-    text-decoration: none;
-    border-radius: 5px;
-  }
+
 
 
   b {
@@ -125,6 +113,15 @@
     border-radius: 5px;
   }
 
+  a {
+    color:black;
+    outline: none;
+    background-color: #b8bb66;
+    padding: 0px 0px;
+    text-decoration: none;
+    border-radius: 0px;
+  }
+
 
   button {
     color:white;
@@ -135,8 +132,5 @@
     border-radius: 5px;
   }
 
-  #logodos{
-    float:right;
-  }
   /* Aca termina el codigo CSS */
 </style>
