--- a/descarga.html
+++ b/descarga.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Free Freaks - Videoclips</title>
+    <title>Freektom - Descarga</title>
   </head>
 <link rel="icon" href="iconos.png">
   <font face="Arial" size="7" color: "white">
