--- a/freeks.html
+++ b/freeks.html
@@ -4,7 +4,7 @@
     <link rel="shortcut icon" type="img/png" href="img/iconos.png">
     <meta charset="utf-8">
     <title>Freeks</title>
-    <body style="background-color:#040707;">
+    <body style="background-color:#b8bb66;">
 
       <style>
 
@@ -45,17 +45,17 @@
         <ul>
 
 
-<strong>
+  <strong>
   <font face=Arial>
-  <li style= "color: red"><a href="menu.html" style="color: #fb3f00; text-decoration: none;">Atras</a> </li>
-  <li style= "color: red"><a href="qienessomos.html" style="color: #fb3f00; text-decoration: none;">Miembros</a> </li>
-  <li style= "color: red"><a href="ayuda.html" style="color: #fb3f00; text-decoration: none;">Ayuda</a> </li>
-  <li style= "color: red"><a href="noticias.html" style="color: #fb3f00; text-decoration: none;">Noticias</a></li>
-  <li style= "color: red"><a href="contacto.html" style="color: #fb3f00; text-decoration: none;">Contacto</a></li>
+  <strong><li style= "color: red"><h2 href="menu.html" style="color: #d01e1e; text-decoration: none;">Atras</a> </li>
+  <li style= "color: red"><h2 href="qienessomos.html" style="color: #d01e1e; text-decoration: none;">Miembros</a> </li>
+  <li style= "color: red"><h2 href="ayuda.html" style="color: #d01e1e; text-decoration: none;">Ayuda</a> </li>
+  <li style= "color: red"><h2 href="noticias.html" style="color: #d01e1e; text-decoration: none;">Noticias</a></li>
+  <li style= "color: red"><h2 href="contacto.html" style="color: #d01e1e; text-decoration: none;">Contacto</a></li></strong>
           <li>ㅤ</li>
 <span></span>
 
-</strong>
+  </strong>
         </ul>
 
   </div>
@@ -66,13 +66,15 @@
 
 
 <font size="4">
-    <h1 style="font-family:Arial; color: red""color: red"><center> Bienvenido Querido Freek </h1>
-      <a style="font-family:Arial; color: red"><center> Somos una agencia artistica de inteligencia, aqui encontraras por sus nombres de usuario a artistas y gente muy inteligente. No ocultamos nada, somos buenas personas con gran corazon... Y porque freeks? es un juego de palabras con la palabra del ingles Free que significa ser libre, a lo ultimo le agrege una K para que su pronunciacion sea Friks y para escribirlo sea Freeks que significa raros,  "Raros Libres" por eso "Freeks",. Bueno, me presento, yo soy Freektom, el administrador de todo esto, les voy a contar un poco de como ingresar al grupo, hay que ser un buen artista, dibujante o escritor y tener mucho contenido para exponer, no hay que esconder nada ni tener verguenza. Yo dibujo, hago musica y escribo cosas para pensarlas, el poder verdadero de nuestras mentes es increible, tenemos un grupo en Whatsapp para charlar y compartir, hacer preguntas o pedir cosas, sin abusar. Tambien estoy estudiando ingenieria informatica y esta pagina web la hice a mano para practicar yo solito me encanta en lo que se esta transofmando esto, buscamos gente buena e inteligente que quiera participar en un grupo artistico y de inteligencia con la mente abierta, educados y con ganas de crear y aprender, si esto te interesa te recomiendo que mandes un email a 'agenciafreefreaks@gmail.com' para que te leamos y te integremos, puedes pasar el dato si gustas... En el mail que nos mandes cuentanos todo lo que puedes hacer, algo sobre tu persona y pensamientos que te responderemos en breve, Hasta Luego! </a>
+    <h1 style="font-family:Arial; color: black ""color: red"><center> Bienvenido Querido Freek </h1>
+      <a style="font-family:Arial Black; color: black "><center> Somos una agencia artistica de inteligencia, aqui encontraras por sus nombres de usuario a artistas y gente muy inteligente. No ocultamos nada, somos buenas personas con gran corazon... Y porque freeks? es un juego de palabras con la palabra del ingles Free que significa ser libre, a lo ultimo le agrege una K para que su pronunciacion sea Friks y para escribirlo sea Freeks que significa raros,  "Raros Libres" por eso "Freeks",. Bueno, me presento, yo soy Freektom, el administrador de todo esto, les voy a contar un poco de como ingresar al grupo, hay que ser un buen artista, dibujante o escritor y tener mucho contenido para exponer, no hay que esconder nada ni tener verguenza. Yo dibujo, hago musica y escribo cosas para pensarlas, el poder verdadero de nuestras mentes es increible, tenemos un grupo en Whatsapp para charlar y compartir, hacer preguntas o pedir cosas, sin abusar. Tambien estoy estudiando ingenieria informatica y esta pagina web la hice a mano para practicar yo solito me encanta en lo que se esta transofmando esto, buscamos gente buena e inteligente que quiera participar en un grupo artistico y de inteligencia con la mente abierta, educados y con ganas de crear y aprender, si esto te interesa te recomiendo que mandes un email a 'agenciafreefreaks@gmail.com' para que te leamos y te integremos, puedes pasar el dato si gustas... En el mail que nos mandes cuentanos todo lo que puedes hacer, algo sobre tu persona y pensamientos que te responderemos en breve.
+      </a><a style="font-family:Arial Black; color: black "><center>Hasta Luego!</a>
+        <h5 style="font-family:Arial; color: black ""color: red"><center> </h5>
 
 
    </body>
 <center>
-    <img src="icofreeks.png"/>
+    <img src="friiks.png"/>
   </center>
 </html>
 
@@ -83,8 +85,8 @@ a{
   <center>
   max-width: 1040px;
 text-align: center;
-line-height: 34px;
-padding: 0 20px
+line-height: 19px;
+padding: 20 20px
 <center>
 
 
