--- a/freeks.html
+++ b/freeks.html
@@ -47,11 +47,11 @@
 
   <strong>
   <font face=Arial>
-  <li style= "color: red"><a href="menu.html" style="color: #d01e1e; text-decoration: none;">Atras</a> </li>
-  <li style= "color: red"><a href="qienessomos.html" style="color: #d01e1e; text-decoration: none;">Miembros</a> </li>
-  <li style= "color: red"><a href="ayuda.html" style="color: #d01e1e; text-decoration: none;">Ayuda</a> </li>
-  <li style= "color: red"><a href="noticias.html" style="color: #d01e1e; text-decoration: none;">Noticias</a></li>
-  <li style= "color: red"><a href="contacto.html" style="color: #d01e1e; text-decoration: none;">Contacto</a></li>
+  <li style= "color: red"><a href="menu.html" style="color: #8b0000; text-decoration: none;">Atras</a> </li>
+  <li style= "color: red"><a href="qienessomos.html" style="color: #8b0000; text-decoration: none;">Miembros</a> </li>
+  <li style= "color: red"><a href="ayuda.html" style="color: #8b0000; text-decoration: none;">Ayuda</a> </li>
+  <li style= "color: red"><a href="noticias.html" style="color: #8b0000; text-decoration: none;">Noticias</a></li>
+  <li style= "color: red"><a href="contacto.html" style="color: #8b0000; text-decoration: none;">Contacto</a></li>
           <li>ㅤ</li>
 <span></span>
 
