--- a/qienessomos.html
+++ b/qienessomos.html
@@ -3,13 +3,13 @@
   <head>
     <link rel="shortcut icon" type="img/png" href="img/iconos.png">
 
-          <a style= "color: red"><a href="freeks.html" style="color: #fb3f00; text-decoration: none;"><font face=Arial> <font size="+6">ㅤATRAS</a> </font>
+          <a style= "color: red"><a href="freeks.html" style="color: black; text-decoration: none;"><font face=Arial> <font size="+6">ㅤATRAS</a> </font>
       <link rel="shortcut icon" type="img/png" href="img/iconos.png">
     <meta charset="utf-8">
     <title>Miembros</title>
   </head>
   <font face= "Arial">
-<center><b> <h1 style= "color: red">Integrantes: </h1> </b></center>
+<center><b> <h1 style= "color: black">Integrantes: </h1> </b></center>
 
 
 
@@ -18,7 +18,7 @@
 
 </strong>
 
-    <body style="background-color:black;">
+    <body style="background-color:#b8bb66;">
 
       <style>
 
