--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     <font size="3" style="color: red">® Creado por Freektom (TCL) </font>
     <center>
       <font size="5" font="Arial">
-  <h2 id:"titulo" style="color: red">ㅤFree Freak</h2>
+  <h2 id:"titulo" style="color: black">Free Freaks</h2>
 
       <img src="portada.png" />
       <br />
-      <a id:"entrada" href="menu.html">ㅤENTRAR </a>
+      <a id:"entrada" href="menu.html">ENTRAR </a>
     </center>
   </body>
 </html>
