--- a/contacto.html
+++ b/contacto.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Contacto</title>
+    <link rel="icon" href="iconos.png">
     <font face=Arial>
       <center><a style= "color: black">ㅤ </a></center>
     <center><strong><a style= "color: black"> <font size="+4">GRACIAS POR TU INTERES</a></strong></center>
