--- a/Musica.html
+++ b/Musica.html
@@ -8,10 +8,10 @@
 <link rel="icon" href="iconos.png">    <body>
     <center>
       <font face="Arial" size="7" color: "black">
-      <b><a href="menu.html" style="color: white">Menu</a></b>
+      <b><a href="menu.html" style="color: black">Menu</a></b>
     </center>
     <center>
-            <img src="musik.png"/>
+            <img src="musika.png"/>
           </center>
 
     <center>
@@ -20,6 +20,9 @@
   <center>
   <iframe src="https://open.spotify.com/embed/album/33jf1nIRLfj1oIEu9FG4D6" width="20%" height="220" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>    <iframe src="https://open.spotify.com/embed/album/1I5tmJwXguMI6aD2yE3Iuz" width="22%" height="220" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
   </center>
+  <center>
+  <iframe <iframe style="border-radius:12px" src="https://open.spotify.com/embed/album/0z0rQ3SyEaDWgS58OQ2o2Y?utm_source=generator" width="20%" height="110" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+</center>
 
 
 
@@ -32,13 +35,13 @@
   /* Esto es codigo CSS porque esta adentro de un tag <style> */
   * {
     font-family: -apple-system, BlinkMacSystemFont, 'Arial', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    background-color: black
+    background-color: #b8bb66
   }
 
   a {
     color:white;
     outline: none;
-    background-color: black;
+    background-color: #b8bb66;
     padding: 5px 10px;
     text-decoration: none;
     border-radius: 5px;
