--- a/Rimasroboticas.html
+++ b/Rimasroboticas.html
@@ -9,8 +9,8 @@
 <body>
 
     <center>
-      <font face="Arial" size="7" color: "white">
-    <center><b><a href="menu.html" style="color: white">Menu</a></b> </center>
+      <font face="Arial" size="7" color: "black">
+    <center><b><a href="menu.html" style="color: black">Menu</a></b> </center>
 <iframe width="260" height="260" src="https://www.youtube.com/embed/3Xenr9_P-W4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <iframe width="260" height="260" src="https://www.youtube.com/embed/6P2pcQkYXIY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <iframe width="260" height="260" src="https://www.youtube.com/embed/BmHx0P1FuqA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -42,7 +42,7 @@
 a {
   color:black;
   outline: none;
-  background-color: black;
+  background-color: #b8bb66;
   padding: 5px 10px;
   text-decoration: none;
   border-radius: 5px;
@@ -51,7 +51,7 @@ a {
  *{
   color:black;
   outline: none;
-  background-color: black;
+  background-color: #b8bb66;
   padding: 5px 10px;
   text-decoration: none;
   border-radius: 5px;
