--- a/Sobre mi.html
+++ b/Sobre mi.html
@@ -9,9 +9,9 @@
 
   <center>
     <font face="Arial" size="7" color: "white">
-    <b><a href="menu.html" style="color: white">Menu</a></b></center></font>
+    <b><a href="menu.html" style="color: black">Menu</a></b></center></font>
     <font face=Arial>
-  <center><H3><font color="white">F R E E K T O M.
+  <center><H3><font color="black">F R E E K T O M.
 
 Buenas mi nombre artistico es Freektom y HappyBoii, soy de un horoscopo muy bravo basandonos en caracteristicas cosmicas, hijo de la madre mas santa, mi padrastro me ayudo a criarme muy bien, es buena persona, siempre me gusto la diversion, el rock, saltar, disfrazarme, correr, andar en bicicleta, ir al jardin!
 
@@ -49,13 +49,13 @@ Me gustan los espejos, la comida chatarra y escuchar musica, mientras pinto o es
   p {
     color:white;
     outline: none;
-    background-color: #A816ff;
+    background-color: #b8bb66;
     padding: 5px 10px;
     text-decoration: none;
     border-radius: 5px;
   }
 
-  * {   background-color: black
+  * {   background-color: #b8bb66
 
     }
 
