--- a/Videoclips.html
+++ b/Videoclips.html
@@ -7,16 +7,16 @@
   </head>
 <link rel="icon" href="iconos.png">
   <font face="Arial" size="7" color: "white">
-<center><b><a href="menu.html" style="color: white">Menu</a></b> </center>
+<center><b><a href="menu.html" style="color: black">Menu</a></b> </center>
   <body>
 
     <center>
 
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/xLTAxgBgC54" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/aCqolKDveBE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen ></iframe>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/vwdEXgEeBEM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-   <iframe width="560" height="315" src="https://www.youtube.com/embed/WRWAiFCAIcA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-   <iframe width="560" height="315" src="https://www.youtube.com/embed/QuTBm8ajRjE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <iframe width="323" height="250" src="https://www.youtube.com/embed/xLTAxgBgC54" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <iframe width="323" height="250" src="https://www.youtube.com/embed/aCqolKDveBE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen ></iframe>
+    <iframe width="323" height="250" src="https://www.youtube.com/embed/vwdEXgEeBEM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+   <iframe width="323" height="250" src="https://www.youtube.com/embed/WRWAiFCAIcA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+   <iframe width="323" height="250" src="https://www.youtube.com/embed/QuTBm8ajRjE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </center>
   </body>
 </html>
@@ -27,7 +27,7 @@
 a {
   color:black;
   outline: none;
-  background-color: black;
+  background-color: #b8bb66;
   padding: 5px 10px;
   text-decoration: none;
   border-radius: 5px;
@@ -36,7 +36,7 @@ a {
  *{
   color:black;
   outline: none;
-  background-color: black;
+  background-color: #b8bb66;
   padding: 5px 10px;
   text-decoration: none;
   border-radius: 5px;
