--- a/menu.html
+++ b/menu.html
@@ -92,7 +92,7 @@
 
 <div style= "text-align: top;">
   <font size="18" face=Arial>
-<b style="left:605px; position: absolute;top: 80%; color: red"><a href="freeks.html">.::FREEKS::.</b>
+<b style="left:635px; position: absolute;top: 80%; color: red"><a href="freeks.html">F R E E K S</b>
 </div>
 
   <body>
