--- a/Musica.html
+++ b/Musica.html
@@ -14,16 +14,17 @@
             <img src="musika.png"/>
           </center>
 
-    <center>
-    <iframe src="https://open.spotify.com/embed/album/0AJaaCzMDJgavsDODS55T7" width="20%" height="220" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>   <iframe src="https://open.spotify.com/embed/album/6QMjsHiy0bt4r8ulVU0CmZ" width="22%" height="220" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
-  </center>
-  <center>
-  <iframe src="https://open.spotify.com/embed/album/33jf1nIRLfj1oIEu9FG4D6" width="20%" height="220" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>    <iframe src="https://open.spotify.com/embed/album/1I5tmJwXguMI6aD2yE3Iuz" width="22%" height="220" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
-  </center>
-  <center>
-  <iframe <iframe style="border-radius:12px" src="https://open.spotify.com/embed/album/0z0rQ3SyEaDWgS58OQ2o2Y?utm_source=generator" width="20%" height="110" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
-</center>
+      <b><a href="" style="color: black"></a></b>
 
+<center>
+    <iframe src="https://open.spotify.com/embed/album/0AJaaCzMDJgavsDODS55T7" width="12%" height="200" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>   <iframe src="https://open.spotify.com/embed/album/6QMjsHiy0bt4r8ulVU0CmZ" width="12%" height="200" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+
+  <iframe src="https://open.spotify.com/embed/album/33jf1nIRLfj1oIEu9FG4D6" width="12%" height="200" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>    <iframe src="https://open.spotify.com/embed/album/1I5tmJwXguMI6aD2yE3Iuz" width="12%" height="200" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+
+
+  <iframe <iframe style="border-radius:12px" src="https://open.spotify.com/embed/album/0z0rQ3SyEaDWgS58OQ2o2Y?utm_source=generator" width="12%" height="200" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+
+</center>
 
 
 
