--- a/contacto.html
+++ b/contacto.html
@@ -6,17 +6,20 @@
     <link rel="icon" href="iconos.png">
     <font face=Arial>
       <center><a style= "color: black">ㅤ </a></center>
-    <center><strong><a style= "color: black"> <font size="+4">GRACIAS POR TU INTERES</a></strong></center>
+    <center><strong><a style= "color: black"> <font size="+3">GRACIAS POR TU INTERES </a></strong></center>
     <body style="background-color:#b8bb66;">
   </head>
-  <b>  <a style= "left:688px; position: absolute;down: 80%; color: black"><font size="+5"><a href="freeks.html" style="color: black; text-decoration: none;">ㅤATRAS</a> </b>
+
+  <b> <font size="+4"><a href="freeks.html" style="color: black; text-decoration: none;">ㅤATRAS</a> </b>
+
+
   <body>
 
-                        <center><a style= "color: red">ㅤ </a></center>
-
-            <center><a style= "color: black"> <font size="+2">Quieres contactarnos? sigue leyendo que mas adelante presentare el correo oficial de la Agencia. Si quieres unirte a esta Agencia Artistica de Inteligencia es muy facil.! Debes tener cosas para exponer, como pensamientos escritos, dibujos, musica o ser lo suficientemente inteligente para presentar tus filosofias escritas en algun dispositivo, ya cuando superemos los 7 integrantes, hare el trabajo de crear un grupo en Whatsapp Web donde podran compartir sus cosas, dar sus puntos de vista, apoyarse, pedir ayuda o dar consejos, no deben sentir verguenza al interactuar con la gente que no conocen, yo, Freektom, soy el administrador, todo se hablara con respeto y ahora les digo que enviar por correo: Primero: Ingresar tu nombre y Apellidos completos, tu edad, una foto tuya que estes dispuest@ a compartir, que quieres que hagamos con tus creaciones, como exponerlas, como te gustaria que sea tu pagina web dentro de la de Freeks, los colores que te gustaria que tenga y por ultimo, porque te consideras Freek?(loco Libre) Bueno, ahora les dejo el E-Mail por si se quieren unir, ah y se me olvidaba, deben enviarme tambien su numero de celular, gracias.,</a></center>
+  <center><strong><h6 style= "color: black"> <font size="+2">El contacto es para los nuevos que quieran unirse a esta Agencia Artistica de Inteligencia es muy facil!, Debes tener cosas para exponer, como pensamientos o filosofias escritas, dibujos o musica para presentar. Ya cuando superemos los 15 integrantes, hare el grupo en Whatsapp donde podran compartir sus cosas, dar sus puntos de vista, apoyarse, pedir ayuda o dar consejos, por esta razon deben enviarme su numero de telefono, pero principalmente es para que me envien sus textos o dibujos por Whatsapp, no deben tener miedo ni ponerse nerviosos con eso, tampoco no deben sentir verguenza al interactuar con la gente que no conocen, yo, Freektom, soy el administrador, todo se hablara con respeto y ahora les digo que enviar al correo: Primero tu nombre, segundo tu edad, tamnien como quieres que presentemos tus creaciones, como exponerlas, como te gustaria que sea tu sub-pagina web dentro de la de Freeks y los colores que te gustaria que tenga, Bueno, ahora les dejo el E-Mail por si se quieren unir. Te esperamos!,</h1></strong></center>
 
                     <center><h1 style= "color: black">Correo:   "  agenciafreefreaks@gmail.com  "</h1></center>
+
+                    <center><img src="icomini.png"/></center>
 
 
   </body>
@@ -25,13 +28,13 @@
 
 <style media="screen">
 
-a{
+a, h6{
 
   <center>
   max-width: 1040px;
 text-align: center;
-line-height: 34px;
-padding: 0 20px
+line-height: 25px;
+padding: 0 0px
 <center>
 
 
