--- a/contacto.html
+++ b/contacto.html
@@ -10,16 +10,20 @@
     <body style="background-color:#b8bb66;">
   </head>
 
-  <b> <font size="+4"><a href="freeks.html" style="color: black; text-decoration: none;">ㅤATRAS</a> </b>
-
 
   <body>
 
-  <center><strong><h6 style= "color: black"> <font size="+2">El contacto es para los nuevos que quieran unirse a esta Agencia Artistica de Inteligencia es muy facil!, Debes tener cosas para exponer, como pensamientos o filosofias escritas, dibujos o musica para presentar. Ya cuando superemos los 15 integrantes, hare el grupo en Whatsapp donde podran compartir sus cosas, dar sus puntos de vista, apoyarse, pedir ayuda o dar consejos, por esta razon deben enviarme su numero de telefono, pero principalmente es para que me envien sus textos o dibujos por Whatsapp, no deben tener miedo ni ponerse nerviosos con eso, tampoco no deben sentir verguenza al interactuar con la gente que no conocen, yo, Freektom, soy el administrador, todo se hablara con respeto y ahora les digo que enviar al correo: Primero tu nombre, segundo tu edad, tamnien como quieres que presentemos tus creaciones, como exponerlas, como te gustaria que sea tu sub-pagina web dentro de la de Freeks y los colores que te gustaria que tenga, Bueno, ahora les dejo el E-Mail por si se quieren unir. Te esperamos!,</h1></strong></center>
+
+
+<b> <font size="+3"><a href="freeks.html" style="color: black; text-decoration: none;">ㅤATRAS</a> </b><center><strong><h6>El contacto es para los nuevos artistas que quieran unirse a esta Agencia Artistica de Inteligencia. Es muy facil!, Debes tener cosas para exponer, como pensamientos o filosofias escritas, dibujos o musica para presentar. Ya cuando superemos los 15 integrantes, hare el grupo en Whatsapp donde podran compartir sus cosas, dar sus puntos de vista, apoyarse, pedir ayuda o dar consejos, por esta razon deben enviarme su numero de telefono, pero principalmente es para que me envien sus textos o dibujos por Whatsapp, no deben tener ni preocuparse por eso, tampoco no deben sentir verguenza al interactuar con la gente que no conocen, yo, Freektom, soy el administrador, todo se hablara con respeto y ahora les digo que enviar al correo: Primero tu nombre, segundo tu edad, tercero tu nombre artistico o nickname, tambien como quieres que presente tus creaciones, como exponerlas, en general es como te gustaria que sea tu sub-pagina web dentro de la de "Freeks" en "Miembros" y los colores que te gustaria que tenga, bueno, ahora les dejo el E-Mail por si se quieren unir. Te esperamos!,</a></strong></center>
 
                     <center><h1 style= "color: black">Correo:   "  agenciafreefreaks@gmail.com  "</h1></center>
 
-                    <center><img src="icomini.png"/></center>
+
+
+                        <center><img src="icomini.png"/>
+
+
 
 
   </body>
@@ -28,12 +32,12 @@
 
 <style media="screen">
 
-a, h6{
+a, {
 
   <center>
   max-width: 1040px;
 text-align: center;
-line-height: 25px;
+line-height: 1px;
 padding: 0 0px
 <center>
 
