--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
       <img src="portada.png" />
       <br />
-      <a id:"entrada" href="menu.html">ENTRAR </a>
+      <a id:"entrada" href="menu.html">ㅤENTRAR </a>
     </center>
   </body>
 </html>
