--- a/Pareidolias.html
+++ b/Pareidolias.html
@@ -13,6 +13,8 @@
       <font face="Arial" size="7" color: "black">
       <b><a href="menu.html" style="color: black">Menu</a></b>
     <div class="Galeria">
+      <a href="pdlias/19.png"data-lightbox="Galeria"><img src="pdliaz/19.png"></a>
+      <a href="pdlias/18.png"data-lightbox="Galeria"><img src="pdliaz/18.png"></a>
       <a href="pdlias/17.jpg"data-lightbox="Galeria"><img src="pdliaz/17.jpg"></a>
       <a href="pdlias/16.jpg"data-lightbox="Galeria"><img src="pdliaz/16.jpg"></a>
       <a href="pdlias/15.jpg"data-lightbox="Galeria"><img src="pdliaz/15.jpg"></a>
