--- a/junchantxt.html
+++ b/junchantxt.html
@@ -206,7 +206,138 @@ Sus ojos subían y su boca se abría de una manera perturbadora, no sufría, no 
 
 </P>
 
+
+
+
+
+
+
+
+<P>
+
+</P>
+
+<center><h2><font color=white> MASOQUISMO INCONSCIENTE.</h2></center>
+
+<font color=red><center><h3>Alguna vez has sentido que tu vida cae por un enorme abismo oscuro y con lamento, donde no eres lo que crees que quieres ser, donde tus sueños se desvanecen como un soplo de ceniza al aire, donde  tu existencia quiere ser devuelta al gran sueño divino, pero aún así sientes ese gran deseo de continuar con el plan que te llevará a tu propia perdición.</h3>
+
+<P>
+
+
+
+
+</P>
+
 ㅤ
+
+
+
+
+
+
+<P>
+
+</P>
+
+<center><h2><font color=white> Y QUE HAY DE LOS MEDICAMENTOS.</h2></center>
+
+<font color=red><center><h3>Sufro de migraña y me he dado cuenta que tengo que dublicar los medicamentos para que me hagan efecto... Como todos lo consumimos y sabiendo que la medicina es una droga, acostumbearemos al cuerpo luego necesitaremos duplicar la dosis o hacerlos más fuertes para que quitar una simple gripe. Esto si que es un problema. Y muy serio</h3>
+
+<P>
+
+
+
+
+</P>
+
+
+
+
+
+
+<P>
+
+</P>
+
+<center><h2><font color=white> DEBATES NONONO.</h2></center>
+
+<font color=red><center><h3>Odio los debates porque la gente solo piensa en si mismas y en que deben de ganar. Ellos no escuchan y no toman en cuenta las opiniones. Entonces que es, es todo menos un debate. Para debatir necesitas primero aprender a escuchar; la gente se cierra a su propio pensamiento, no hay nada mejor que aprender de las demás personas con un diálogo amigable.</h3>
+
+<P>
+
+
+
+
+</P>
+
+
+
+
+
+
+
+<P>
+
+</P>
+
+<center><h2><font color=white> UN GRAN TABU.</h2></center>
+
+<font color=red><center><h3>La muerte es sombría llena mi cuerpo de escalofríos, me provoca un sentimiento vomitivo y un olor repugnante, generando un pánico eléctrico hacía mi cerebro, mis músculos se tuercen hasta quedar inmóvil por la impactante y bizarra imágen del ---- y el dolor imprentado en mi cerebro, impresionantemente horrendo y paralizante, impotencia gráfica de querer terminar con mi existencia y sentimiento de mantenerme en pie pero con esta gran carga visual terrible dejandome hundida en las profundidades del gran océano azul y oscuro sin saber que hacer con esta pobre alma débil y sin camino, supongo que así es la vida y la vida después de la vida siempre en un paisaje cubierto de mentiras escondiendo el gran secreto de la obra más hermosa jamás hecha, tan lúgubre, tan maravilloso, tan triste y tan doloroso...</h3>
+
+<P>
+
+
+
+
+</P>
+
+
+
+
+
+
+
+
+
+<P>
+
+</P>
+
+<center><h2><font color=white> SAKURA TREE.</h2></center>
+
+<font color=red><center><h3>Mi semilla de cerezo me dice buenas noches, su dulce y melodiosa voz me dice gracias, su calmado y cálido sonido me abraza y me dice que me quiere, mi precioso cerezo me entrega su preciada presencia, mi semilla de cerezo me ama</h3>
+
+<P>
+
+
+
+
+</P>
+
+
+
+
+
+
+<P>
+
+</P>
+
+<center><h2><font color=white> NO TITLE.</h2></center>
+
+<font color=red><center><h3>Nacemos para vivir y vivimos para morir; Nos dirigimos a "la  estación postrera" como decía Campoamor. La autenticidad en mí la identifico como un estado abierto y receptivo de lo que ocurre fuera y dentro; cuando me siento libre de ser y mi mente no está en juicio, sino en la experiencia del instante precente, la única experiencia real de vida.
+
+Cada día pienso en la muerte, como una herramienta de conciencia, valoración y disfrute de la vida. Mi único enfoque y objetivo es vivir precente, y ahí no hay muerte, temor ni angustia. No creo, sinceramente que esa presencia desaparezca cuando me muera, pero si fuera así, si mi experiencia de mi es la vida, tampoco tiene sentido preocuparme por la no vida, sino sumergirme y vivir en cada presente en el que existo.</h3>
+
+<P>
+
+
+
+
+</P>
+
+
+
 ㅤ
 ㅤ
 ㅤ
