--- a/Fotografias.html
+++ b/Fotografias.html
@@ -5,7 +5,7 @@
     <title>Free Freaks - Fotografias</title>
     <link rel="shortcut icon" type="img/png" href="img/iconos.png">
   </head>
-  <link rel="icon" href="iconos.png">  
+  <link rel="icon" href="iconos.png">
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/lightbox.min.css">
   <script src="js/lightbox-plus-jquery.min.js"></script>
@@ -14,6 +14,7 @@
       <font face="Arial" size="7" color: "black">
       <b><a href="menu.html" style="color: black">Menu</a></b>
     <div class="Galeria">
+      <a href="img/01.jpg"data-lightbox="Galeria"><img src="imgss/01.jpg"></a>
       <a href="img/1.jpg"data-lightbox="Galeria"><img src="imgss/1.jpg"></a>
       <a href="img/2.jpg"data-lightbox="Galeria"><img src="imgss/2.jpg"></a>
       <a href="img/3.jpg"data-lightbox="Galeria"><img src="imgss/3.jpg"></a>
