--- a/menu.html
+++ b/menu.html
@@ -37,7 +37,7 @@
 
       <div style= "text-align: top;">
         <font size="5" face=Arial>
-      <b style="left:700px; position: absolute;top: 31%; color: red"><a href="Dibujos.html"> Dibujos</b>
+      <b style="left:700px; position: absolute;top: 31%; color: red"><a href="Dibujos.html"> Mis Dibujos</b>
       </div>
 
       <div style= "text-align: top;">
@@ -67,12 +67,17 @@
 
       <div style= "text-align: top;">
         <font size="5" face=Arial>
-      <b style="left:700px; position: absolute;top: 67%; color: red"><a href="Rimasroboticas.html"> Rimas Roboticas</b>
+      <b style="left:700px; position: absolute;top: 67%; color: red"><a href="audiolibro.html"> Mi Audiolibro</b>
       </div>
 
       <div style= "text-align: top;">
         <font size="5" face=Arial>
-      <b style="left:700px; position: absolute;top: 73%; color: red"><a href="descarga.html"> Descarga</b>
+      <b style="left:700px; position: absolute;top: 73%; color: red"><a href="Rimasroboticas.html"> Rimas Roboticas</b>
+      </div>
+
+      <div style= "text-align: top;">
+        <font size="5" face=Arial>
+      <b style="left:700px; position: absolute;top: 79%; color: red"><a href="descarga.html"> Descarga</b>
       </div>
 
 
