--- a/menu.html
+++ b/menu.html
@@ -22,7 +22,7 @@
 
       <style media="screen">
         * {
-          background-color: #b8bb68
+          background-color: #b9bc69
 
         }
 
