--- a/menu.html
+++ b/menu.html
@@ -22,7 +22,7 @@
 
       <style media="screen">
         * {
-          background-color: #b9bc69
+          background-color: #b8bb66
 
         }
 
@@ -97,7 +97,7 @@
 
 <div style= "text-align: top;">
   <font size="18" face=Arial>
-<b style="left:635px; position: absolute;top: 85%; color: red"><a href="freeks.html">F R E E K S</b>
+<b style="left:635px; position: absolute;top: 85%; color: red"><!--<<a href="freeks.html">F R E E K S--></b>
 </div>
 
   <body>
@@ -111,12 +111,12 @@
 
   b {
     font-family: -apple-system, BlinkMacSystemFont, 'Arial', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    background-color: #b9bc69
+    background-color: #b8bb66
   }
   b {
     color: red;
     outline: none;
-    background-color: #b9bc69;
+    background-color: #b8bb66;
     padding: 5px 10px;
     text-decoration: none;
     border-radius: 5px;
@@ -125,7 +125,7 @@
   a {
     color:black;
     outline: none;
-    background-color: #b9bc69;
+    background-color: #b8bb66;
     padding: 0px 0px;
     text-decoration: none;
     border-radius: 0px;
@@ -135,7 +135,7 @@
   button {
     color:white;
     outline: none;
-    background-color: #b9bc69;
+    background-color: #b8bb66;
     padding: 5px 10px;
     text-decoration: none;
     border-radius: 5px;
