--- a/Pareidolias.html
+++ b/Pareidolias.html
@@ -16,12 +16,14 @@
       <a href="pdlias/19.png"data-lightbox="Galeria"><img src="pdliaz/19.png"></a>
       <a href="pdlias/18.png"data-lightbox="Galeria"><img src="pdliaz/18.png"></a>
       <a href="pdlias/17.jpg"data-lightbox="Galeria"><img src="pdliaz/17.jpg"></a>
+      <a href="pdlias/33.jpg"data-lightbox="Galeria"><img src="pdliaz/33.jpg"></a>
       <a href="pdlias/16.jpg"data-lightbox="Galeria"><img src="pdliaz/16.jpg"></a>
       <a href="pdlias/15.jpg"data-lightbox="Galeria"><img src="pdliaz/15.jpg"></a>
       <a href="pdlias/14.jpg"data-lightbox="Galeria"><img src="pdliaz/14.jpg"></a>
       <a href="pdlias/13.jpg"data-lightbox="Galeria"><img src="pdliaz/13.jpg"></a>
       <a href="pdlias/12.jpg"data-lightbox="Galeria"><img src="pdliaz/12.jpg"></a>
       <a href="pdlias/11.jpg"data-lightbox="Galeria"><img src="pdliaz/11.jpg"></a>
+      <a href="pdlias/55.jpg"data-lightbox="Galeria"><img src="pdliaz/55.jpg"></a>
       <a href="pdlias/10.jpg"data-lightbox="Galeria"><img src="pdliaz/10.jpg"></a>
       <a href="pdlias/9.jpg"data-lightbox="Galeria"><img src="pdliaz/9.jpg"></a>
       <a href="pdlias/8.jpg"data-lightbox="Galeria"><img src="pdliaz/8.jpg"></a>
