--- a/Rimasroboticas.html
+++ b/Rimasroboticas.html
@@ -11,6 +11,9 @@
     <center>
       <font face="Arial" size="7" color: "black">
     <center><b><a href="menu.html" style="color: black">Menu</a></b> </center>
+<iframe width="260" height="260ss" src="https://www.youtube.com/embed/1xp5HouQiDU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe width="260" height="260" src="https://www.youtube.com/embed/RVkUVC9rYWs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe width="260" height="260" src="https://www.youtube.com/embed/rdC94p1yhDc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <iframe width="260" height="260" src="https://www.youtube.com/embed/3Xenr9_P-W4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <iframe width="260" height="260" src="https://www.youtube.com/embed/6P2pcQkYXIY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <iframe width="260" height="260" src="https://www.youtube.com/embed/BmHx0P1FuqA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -26,6 +29,7 @@
 <iframe width="260" height="260" src="https://www.youtube.com/embed/DqPNu_DwmpU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <iframe width="260" height="260" src="https://www.youtube.com/embed/zNvbz1HFJ1g" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <iframe width="260" height="260" src="https://www.youtube.com/embed/faPfNTGBt9Q" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe width="260" height="260" src="https://www.youtube.com/embed/_rZ3yGFkZR0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <iframe width="260" height="260" src="https://www.youtube.com/embed/RXmu_NyJo_o" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 
